SET(DATADIR "${SHARE_INSTALL_PREFIX}/ticklemonster/data")

if(APPLE)
  SET(DATADIR "${BIN_INSTALL_DIR}/ticklemonster.app/Contents/Resources/data") #OMG NASTY
endif(APPLE)

add_subdirectory(icons)
if(UNIX AND NOT APPLE)
  install(FILES ticklemonster.desktop DESTINATION ${XDG_APPS_INSTALL_DIR})
endif(UNIX AND NOT APPLE)
install(DIRECTORY sprites DESTINATION ${DATADIR})
install(DIRECTORY fonts DESTINATION ${DATADIR})
install(FILES bg.png DESTINATION ${DATADIR})
install(FILES bg2.png DESTINATION ${DATADIR})
install(FILES buildings.png DESTINATION ${DATADIR})
install(FILES busted.png DESTINATION ${DATADIR})
install(FILES hid.png DESTINATION ${DATADIR})
install(FILES hid2.png DESTINATION ${DATADIR})
install(FILES meter.png DESTINATION ${DATADIR})
install(FILES monster.png DESTINATION ${DATADIR})
install(FILES title.png DESTINATION ${DATADIR})
install(FILES click.flac DESTINATION ${DATADIR})
install(FILES dosowisko.flac DESTINATION ${DATADIR})
install(FILES kbd.flac DESTINATION ${DATADIR})
install(FILES key.flac DESTINATION ${DATADIR})
install(FILES laughter.flac DESTINATION ${DATADIR})
install(FILES monster.flac DESTINATION ${DATADIR})
install(FILES point.flac DESTINATION ${DATADIR})

